2008-09-26  John W. Eaton  <jwe@octave.org>

	* symtab.cc (out_of_date_check_internal):
	Fix order of arguments in call to load_path::find_method.

2008-09-26  David Bateman  <dbateman@free.fr>

	* ov-class.h (idx_vector index_vector (void) const): Declare new
	maethod.
	* ov-class.cc (idx_vector index_vector (void) const): Define new
	method.
	* (Fismethod): New function.

2008-09-26  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (urlwrite_cleanup_file) New function.
	(urlwrite_delete_file, urlwrite_filename): New static variables.
	(Furlwrite): Only return filename if urlget succeeds.  Use
	unwind_protect to delete files we create if download fails.

2008-09-26  Jaroslav Hajek  <highegg@gmail.com>

	* ov-null-mat.h: New header file.
	* ov-null-mat.cc: New source.
	* ov.h (octave_value::is_null_value, octave_value::non_null_value,
	octave_value::make_non_null_value):
	Declare new member functions.
	* ov.cc (octave_value:non_null_value, octave_value::make_non_null_value): 
	Define them.
	(octave_value::assign (assign_op op, const octave_value& rhs)): 
	(register_types): Register null types.
	Call non_null_value ().
	* oct-obj.cc (octave_value_list::normalize_null_values): New member
	function. 
	* oct-obj.h (octave_value_list::normalize_null_values): Declare it.
	* ov-base.h (is_null_value): New virtual member function.
	* ops.h (NULLASSIGNOPDECL, DEFNULLASSIGNOP_FN): New macros.
	* ov-base-mat.cc (octave_base_mat<MT>::delete_elements): New member func.
	* ov-base-mat.h: Declare it.
	* ov-base-sparse.cc (octave_base_sparse<MT>::delete_elements): New member func.
	* ov-base-sparse.h: Declare it.
	* ov-cell.cc (octave_cell:subsasgn): Handle null values.	
	* ov-struct.cc (octave_cell:subsasgn): Handle null values.
	* ov-builtin.cc (octave_builtin::do_multi_index_op): Normalize return
	values.
	* pt-misc.cc (tree_parameter_list::define_from_arg_vector): Call
	octave_lvalue::define instead of octave_lvalue::assign.